# partifact

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
partifact/: auth_token.py  config.py  main.py  shell_commands.py
tests/: conftest.py  test_config.py  test_login.py  test_token.py
