[tool.poetry]
name = "partifact"
version = "0.2.0"
description = "CodeArtifact utilties for Poetry"
authors = ["David Steiner <david_j_steiner@yahoo.co.nz>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Validus-Risk-Management/partifact"

[tool.poetry.scripts]
partifact = "partifact.main:app"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15"
tomlkit = ">=0.7.0,<1.0.0"
typer = "^0.7.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^3.9.0"
flake8-absolute-import = "^1.0"
flake8-blind-except = "^0.2.0"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^21.4.3"
flake8-builtins = "^1.5.3"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.5.0"
flake8-docstrings = "^1.6"
flake8-eradicate = "^1.1.0"
flake8-implicit-str-concat = "^0.2.0"
flake8-mutable = "^1.2.0"
flake8-print = "^4.0.0"
flake8-pytest-style = "^1.5.0"
flake8-simplify = "^0.14.1"
isort = "^5.12.0"
mypy = "^0.910"
pep8-naming = "^0.12.1"
pre-commit = "^2.14.0"
pyfakefs = "^4.5.0"
pytest = "^7.2.0"
pytest-mock = "^3.6.1"
pytest-cov = "^4.0.0"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests/"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
